--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,37 @@
+body {
+  background-color: black;
+  text-align: center;
+  font-family: Verdana, sans-serif;
+}
+
+h1, h2 {
+  color: white;
+}
+
 h1 {
-  font-family: Vernada, sans-serif;
   font-weight: normal;
   font-size: 50px;
   color: white;
   text-align: center;
+}
+
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+}
+
+h3 {
+  color: gray;
+  font-size: 21px;
+}
+
+a.download {
+  color: aquamarine;
+  font-size: 16px;
+  text-align: center;
+}
+
+footer p {
+  text-align: right;
+  color: gray;
 }
